<resources>
    <string name="app_name">Desafio Android</string>
    <string name="textViewMenu">Menu</string>
    <string name="tabuada">Tabuada</string>
    <string name="Quadrado">Quadrado e Cubo</string>
    <string name="distancia">Distância</string>
    <string name="calculadorTabuada">Calculador de Tabuada</string>
    <string name="txvResultado">Resultado para _:</string>
    <string name="CalculadorQuadradoCubo">"Calculador de Quadrado e Cubo "</string>
    <string name="Numero">Numero:</string>
    <string name="numeroInserido">10</string>
    <string name="calcular">Calcular</string>
    <string name="CalculadorDistancia">Calculador da Distância Entre dois Pontos</string>
    <string name="CoordenadasPontoA">Coordenadas do Ponto A:</string>
    <string name="coordenadaX">X</string>
    <string name="CoordenadaX">X:</string>
    <string name="hintCoordenada">5.1</string>
    <string name="CoordenadaY">Y:</string>
    <string name="CoordenadasPontoB">Coordenadas do Ponto B:</string>
    <string name="CalcularDistancia">Calcular Distância</string>
    <string name="teste">"Distância do ponto A ao B: "</string>
    <string name="hintCoordenadaX">5.1</string>
    <string name="CoordenadasA">Coordenadas do Ponto A</string>
    <string name="CoordenadaX1">X:</string>
    <string name="hintCoordX1" />
    <string name="coordenadaY1">Y:</string>
    <string name="hintCoordY1">5.1</string>
    <string name="CoordenadasB">Coordenadas do Ponto B</string>
    <string name="CoordenadaX2">X:</string>
    <string name="CoordenadaY2">Y:</string>
    <string name="ResultadoDistancia" />
</resources>
